Let user create patterns. Add basic evolution logic - need to combine the two together

--- a/page.html
+++ b/page.html
@@ -13,16 +13,7 @@
 <body>
     <div id="board">
     </div>
-
-    <br>
-    <div class="testing">
-        <input type="text" id="in">
-        <br>
-        <button id="add">Add</button>
-        <br>
-        <button id="change">Change</button>
-    </div>
-    <script src="board_logic.js"></script>
+    <script src="board_functions.js"></script>
 </body>
 
 </html>
