Minor changes: bug allowing toggled cells to stay alive. Link commented code

--- a/page.html
+++ b/page.html
@@ -13,7 +13,9 @@
 <body>
     <div id="board">
     </div>
-    <script src="board_functions.js"></script>
+    <button id="evolve">Evolve</button>
+    <script type="module" src="board_functions.js"></script>
+    <script type="module" src="game_logic.js"></script>
 </body>
 
 </html>
