Add animate button. Remove lint

--- a/page.html
+++ b/page.html
@@ -14,6 +14,7 @@
     <div id="board">
     </div>
     <button id="evolve">Evolve</button>
+    <button id="animate">Animate</button>
     <script type="module" src="board_functions.js"></script>
     <script type="module" src="game_logic.js"></script>
 </body>
