--- a/index.html
+++ b/index.html
@@ -11,10 +11,22 @@
 </head>
 
 <body>
-    <div id="board">
+    <div id="game_components">
+        <div id="board">
+        </div>
+        <div id="buttonboard">
+            <button id="evolve">Evolve</button>
+            <button id="animate">Animate</button>
+            <button id="reset">Reset</button>
+            <button id="export">Export</button>
+            <button id="import">Import</button>
+            <select name="choose_state" id="choose_state">
+                <option value="walker">Walker</option>
+                <option value="gosper_gun">Gosper's Gun</option>
+            </select>
+            <button id="load">Load</button>
+        </div>
     </div>
-    <button id="evolve">Evolve</button>
-    <button id="animate">Animate</button>
     <script type="module" src="scripts/main.js"></script>
     <script type="module" src="scripts/cell_functions.js"></script>
     <script type="module" src="scripts/conway_functions.js"></script>
