Update info card text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             was playing around with different automata rules in an attempt to create a 'universal', two-dimensional
             cellular automaton.
             <br><br>
-            These are infinite grids of cells, with certain rules applied to how they evolve.
+            This is an infinite grids of cells, with certain rules applied to how they evolve.
             <br><br>
             It doesn't have to be complicated.<br>
             All you really have to do is create patterns and click 'Animate'. You could also load a pattern by choosing from the drop-down menu. If you're looking
@@ -68,7 +68,9 @@
             <a href="https://steemit.com/steemstem/@procrastilearner/kill-time-at-work-with-recreational-math-conway-s-game-of-life">sheets</a> (<i><a href="https://docs.google.com/spreadsheets/d/1k8mT9a-Fu8x1TkvjYGtrDng8vWQAnNf01nSFCaVwqO4/edit#gid=0">also</a></i>) - 
              and is even an easter egg on 
              <a href="https://www.google.com/search?q=conway%27s+game+of+life&oq=conways&gs_lcrp=EgZjaHJvbWUqCQgCEAAYChiABDIGCAAQRRg8MgcIARAuGIAEMgkIAhAAGAoYgAQyCQgDEAAYChiABDIJCAQQABgKGIAEMgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEIMzgwNWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">Google search!</a>
-            <br><br><br><br><br>
+             <br><br>
+             P.S: The board is sadly not infinite, and so evolution may not be completely accurate for large patterns. This shouldn't stop you from admiring a wide range of patterns, though!
+            <br><br><br><br><br><br>
         </div>
 
     </div>
