Update info card text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Conway's Game of Life
             </h1>
             <br>
-            In 1968, John Conway, a brilliant English Mathematician, invented a new 'game' using
+            In 1968, John Conway, a brilliant British Mathematician, invented a new 'game' using
             pieces of a Go board. This was not by accident; he was inspired by Von Neumann's work on cellular
             automata, and
             was playing around with different automata rules in an attempt to create a 'universal', two-dimensional
