--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div id="info_card_block">
             <button id="info_card_button">
-                < </button>
+                &lt; </button>
         </div>
 
         <div id="info_card_text">
@@ -100,8 +100,8 @@
             </td>
             <td>
                 <label for="animate">
-                    <img id='play' src="./images/play.png">
-                    <img id="pause" src="./images/pause.png" hidden>
+                    <img id='play' src="./images/play.png" alt="play icon">
+                    <img id="pause" src="./images/pause.png" alt="pause icon" hidden>
                 </label>
             </td>
             <td>
